# seedcracker

./: Cargo.toml  build.sh  profile.sh
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: seedcracker_bench.rs
seedcracker/: find_seed.metal  main.cpp  main2.cpp  rng.h  rng.hpp  seedcracker.cpp  seedcracker.hpp
seedcracker.xcodeproj/: project.pbxproj
seedcracker.xcodeproj/xcuserdata/isaac.xcuserdatad/xcschemes/: xcschememanagement.plist
seedcracker_test/: test_main.cpp
src/: item.rs  items.rs  lib.rs  main.rs  metal.rs
src/metal/: find_seed.metal
src/random/: chunkrand.rs  jrand.rs  mcversion.rs  mod.rs  mth.rs  seeds.rs
tests/: test_chunkrand.rs  test_jrand.rs  test_lib.rs
