[package]
name = "seedcracker"
version = "0.1.0"
edition = "2021"

[features]
default = ["exit-early"]
exit-early = []

[dependencies]
arrayvec = { path = "arrayvec" }
const_for = "0.1.5"
lazy_static = "1.5.0"
ocl = "0.19.7"
snmalloc-rs = { version = "0.3.7", features = ["native-cpu", "lto"] }

[profile.dev]
overflow-checks = false


[profile.release]
opt-level = 3
debug = true
codegen-units = 1
lto = true
panic = "abort"


[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "seedcracker_bench"
harness = false
